added tons of tree types (all bees)