@@ -1,6 +1,5 @@
 package net.superfastscyphozoa.sublunary.world.feature.configured;
 
-import com.google.common.collect.ImmutableList;
 import net.minecraft.block.Blocks;
 import net.minecraft.registry.Registerable;
 import net.minecraft.registry.RegistryKey;
@@ -11,6 +10,8 @@ import net.minecraft.world.gen.foliage.BlobFoliagePlacer;
 import net.minecraft.world.gen.foliage.LargeOakFoliagePlacer;
 import net.minecraft.world.gen.stateprovider.BlockStateProvider;
 import net.minecraft.world.gen.treedecorator.BeehiveTreeDecorator;
+import net.minecraft.world.gen.treedecorator.LeavesVineTreeDecorator;
+import net.minecraft.world.gen.treedecorator.TrunkVineTreeDecorator;
 import net.minecraft.world.gen.trunk.LargeOakTrunkPlacer;
 import net.minecraft.world.gen.trunk.StraightTrunkPlacer;
 
@@ -21,17 +22,29 @@ import static net.superfastscyphozoa.sublunary.world.feature.configured.Sublunar
 
 public class SubTreeConfiguredFeatures {
 
-    public static final RegistryKey<ConfiguredFeature<?,?>> OAKIER_OAK_KEY = registerKey("oakier_oak");
-    public static final RegistryKey<ConfiguredFeature<?,?>> OAKIER_OAK_BEES = registerKey("oakier_oak_bees");
+    public static final RegistryKey<ConfiguredFeature<?,?>> OAKIER_OAK = registerKey("oakier_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> LARGE_OAKIER_OAK = registerKey("large_oakier_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> BIRCHIER_BIRCH = registerKey("birchier_birch");
 
-    public static final RegistryKey<ConfiguredFeature<?,?>> LARGE_OAKIER_OAK_KEY = registerKey("large_oakier_oak");
-    public static final RegistryKey<ConfiguredFeature<?,?>> LARGE_OAKIER_OAK_BEES = registerKey("large_oakier_oak_bees");
+    public static final RegistryKey<ConfiguredFeature<?,?>> FOREST_OAK = registerKey("forest_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> LARGE_FOREST_OAK = registerKey("large_forest_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> FOREST_BIRCH = registerKey("forest_birch");
 
-    public static final RegistryKey<ConfiguredFeature<?,?>> BIRCHIER_BIRCH_KEY = registerKey("birchier_birch");
-    public static final RegistryKey<ConfiguredFeature<?,?>> BIRCHIER_BIRCH_BEES = registerKey("birchier_birch_bees");
+    public static final RegistryKey<ConfiguredFeature<?,?>> FLOWER_FOREST_OAK = registerKey("flower_forest_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> LARGE_FLOWER_FOREST_OAK = registerKey("large_flower_forest_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> FLOWER_FOREST_BIRCH = registerKey("flower_forest_birch");
 
-    public static final RegistryKey<ConfiguredFeature<?,?>> SUPER_BIRCHIER_BIRCH_KEY = registerKey("super_birchier_birch");
-    public static final RegistryKey<ConfiguredFeature<?,?>> SUPER_BIRCHIER_BIRCH_BEES = registerKey("super_birchier_birch_bees");
+    public static final RegistryKey<ConfiguredFeature<?,?>> PLAINS_OAK = registerKey("plains_oak");
+
+    public static final RegistryKey<ConfiguredFeature<?,?>> OLD_GROWTH_BIRCH = registerKey("old_growth_birch");
+
+    public static final RegistryKey<ConfiguredFeature<?,?>> MEADOW_OAK = registerKey("meadow_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> MEADOW_BIRCH = registerKey("meadow_birch");
+
+    public static final RegistryKey<ConfiguredFeature<?,?>> VINY_OAK = registerKey("viny_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> LARGE_VINY_OAK = registerKey("large_viny_oak");
+    public static final RegistryKey<ConfiguredFeature<?,?>> VINY_BIRCH = registerKey("viny_birch");
+    public static final RegistryKey<ConfiguredFeature<?,?>> VINY_OLD_GROWTH_BIRCH = registerKey("viny_old_growth_birch");
 
     private static TreeFeatureConfig.Builder oak() {
         return (new TreeFeatureConfig.Builder(
@@ -76,20 +89,36 @@ public class SubTreeConfiguredFeatures {
     public static void bootstrap(Registerable<ConfiguredFeature<?,?>> context) {
 
         //beehives
-        BeehiveTreeDecorator beehiveTreeDecorator = new BeehiveTreeDecorator(0.04F);
+        BeehiveTreeDecorator ForestBeehive = new BeehiveTreeDecorator(0.005F);
+        BeehiveTreeDecorator FlowerForestBeehive = new BeehiveTreeDecorator(0.02F);
+        BeehiveTreeDecorator PlainsBeehive = new BeehiveTreeDecorator(0.05F);
+        BeehiveTreeDecorator MeadowBeehive = new BeehiveTreeDecorator(1.0F);
 
         //trees
-        //vanilla trees
-        SublunaryConfiguredFeatures.register(context, OAKIER_OAK_KEY, Feature.TREE, oak().build());
-        SublunaryConfiguredFeatures.register(context, OAKIER_OAK_BEES, Feature.TREE, oak().decorators(List.of(beehiveTreeDecorator)).build());
+        SublunaryConfiguredFeatures.register(context, OAKIER_OAK, Feature.TREE, oak().build());
+        SublunaryConfiguredFeatures.register(context, LARGE_OAKIER_OAK, Feature.TREE, fancyOak().build());
+        SublunaryConfiguredFeatures.register(context, BIRCHIER_BIRCH, Feature.TREE, birch().build());
 
-        SublunaryConfiguredFeatures.register(context, LARGE_OAKIER_OAK_KEY, Feature.TREE, fancyOak().build());
-        SublunaryConfiguredFeatures.register(context, LARGE_OAKIER_OAK_BEES, Feature.TREE, fancyOak().decorators(List.of(beehiveTreeDecorator)).build());
+        SublunaryConfiguredFeatures.register(context, FOREST_OAK, Feature.TREE, oak().decorators(List.of(ForestBeehive)).build());
+        SublunaryConfiguredFeatures.register(context, LARGE_FOREST_OAK, Feature.TREE, fancyOak().decorators(List.of(ForestBeehive)).build());
+        SublunaryConfiguredFeatures.register(context, FOREST_BIRCH, Feature.TREE, birch().decorators(List.of(ForestBeehive)).build());
 
-        SublunaryConfiguredFeatures.register(context, BIRCHIER_BIRCH_KEY, Feature.TREE, birch().build());
-        SublunaryConfiguredFeatures.register(context, BIRCHIER_BIRCH_BEES, Feature.TREE, birch().decorators(List.of(beehiveTreeDecorator)).build());
+        SublunaryConfiguredFeatures.register(context, FLOWER_FOREST_OAK, Feature.TREE, oak().decorators(List.of(FlowerForestBeehive)).build());
+        SublunaryConfiguredFeatures.register(context, LARGE_FLOWER_FOREST_OAK, Feature.TREE, fancyOak().decorators(List.of(FlowerForestBeehive)).build());
+        SublunaryConfiguredFeatures.register(context, FLOWER_FOREST_BIRCH, Feature.TREE, birch().decorators(List.of(FlowerForestBeehive)).build());
 
-        SublunaryConfiguredFeatures.register(context, SUPER_BIRCHIER_BIRCH_KEY, Feature.TREE, superBirch().build());
-        SublunaryConfiguredFeatures.register(context, SUPER_BIRCHIER_BIRCH_BEES, Feature.TREE, superBirch().decorators(ImmutableList.of(beehiveTreeDecorator)).build());
+        SublunaryConfiguredFeatures.register(context, PLAINS_OAK, Feature.TREE, fancyOak().decorators(List.of(PlainsBeehive)).build());
+
+        SublunaryConfiguredFeatures.register(context, OLD_GROWTH_BIRCH, Feature.TREE, superBirch().decorators(List.of(FlowerForestBeehive)).build());
+
+        SublunaryConfiguredFeatures.register(context, MEADOW_OAK, Feature.TREE, fancyOak().decorators(List.of(MeadowBeehive)).build());
+        SublunaryConfiguredFeatures.register(context, MEADOW_BIRCH, Feature.TREE, superBirch().decorators(List.of(MeadowBeehive)).build());
+
+        //tree variants
+        SublunaryConfiguredFeatures.register(context, VINY_OAK, Feature.TREE, oak().decorators(List.of(TrunkVineTreeDecorator.INSTANCE)).build());
+        SublunaryConfiguredFeatures.register(context, LARGE_VINY_OAK, Feature.TREE, fancyOak().decorators(List.of(TrunkVineTreeDecorator.INSTANCE)).build());
+        SublunaryConfiguredFeatures.register(context, VINY_BIRCH, Feature.TREE, birch().decorators(List.of(TrunkVineTreeDecorator.INSTANCE)).build());
+        SublunaryConfiguredFeatures.register(context, VINY_OLD_GROWTH_BIRCH, Feature.TREE, superBirch().decorators(List.of(TrunkVineTreeDecorator.INSTANCE)).build());
+
     }
 }
